fix navbar alignment issues

--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -41,9 +41,7 @@ body {
 }
 
 .center {
-    margin-left: 50%;
-    transform: translate(-50%);
-    width: 200%;
+    margin: auto;
 }
 
 #buttons,
